feat(infra): validate an ASIC-S container