@@ -11,8 +11,8 @@
 package eu.ecodex.connector.infrastructure.security.util;
 
 import eu.europa.esig.dss.model.DSSDocument;
+import java.io.IOException;
 import java.io.InputStream;
-import org.apache.commons.io.IOUtils;
 
 /**
  * Utility class for handling {@link DSSDocument} operations.
@@ -30,18 +30,33 @@ public class DSSDocumentUtil {
      * @return a byte array containing the full content of the document
      * @throws RuntimeException if an error occurs while reading the document stream
      */
-    public static byte[] getDocumentData(final DSSDocument document) {
-        InputStream in = null;
-        try {
-            in = document.openStream();
+    public static byte[] getDocumentData(DSSDocument document) throws IOException {
+        if (document == null) {
+            throw new IllegalArgumentException("document must not be null");
+        }
 
-            return IOUtils.toByteArray(in);
-        } catch (final RuntimeException e) {
-            throw e;
-        } catch (final Exception e) {
-            throw new RuntimeException(e);
-        } finally {
-            IOUtils.closeQuietly(in);
+        try (var in = document.openStream()) {
+            return in.readAllBytes();
+        }
+    }
+
+    /**
+     * Returns {@code true} if {@code document} contains at least one byte of data.
+     *
+     * @param document the document to probe (must not be null)
+     *
+     * @return {@code true} if data is present, {@code false} if the document is empty or the stream
+     *         cannot be opened
+     */
+    public static boolean hasData(DSSDocument document) {
+        if (document == null) {
+            throw new IllegalArgumentException("document must not be null");
+        }
+
+        try (var inputStream = document.openStream()) {
+            return inputStream.read() != -1;
+        } catch (Exception e) {
+            return false;
         }
     }
 }
